--- a/css/helpers/_mixins.scss
+++ b/css/helpers/_mixins.scss
@@ -2,3 +2,17 @@
   content: '';
   position: absolute;
 }
+
+@mixin flex-container {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+@mixin lato ($weight: 400) {
+  font-family: 'Lato', sans-serif;
+  font-weight: $weight;
+}
