Added centering mixin, colors variables, awesome-slider.html and hero section text.

--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -5,3 +5,10 @@ $BodyFZ: 14px;
 $SmallFZ: 16px;
 $MediumFZ: 18px;
 $BigFZ: 20px;
+
+// Colors
+
+$heroClr: #74c7d5;
+$teamRectangleClr: #4d3f4b;
+$contactsNavAndPlaceholderAndFooterSocialBgClr: #82c8bd;
+$contactsFormAndFooter: #68a097;
