--- a/css/helpers/_mixins.scss
+++ b/css/helpers/_mixins.scss
@@ -16,3 +16,11 @@
   font-family: 'Lato', sans-serif;
   font-weight: $weight;
 }
+
+
+@mixin centering {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
