--- a/css/sections/_hero.scss
+++ b/css/sections/_hero.scss
@@ -5,7 +5,7 @@
 
   #hero-text-wrapper {
     @include centering;
-    z-index: 666666666666666666666666;
+    z-index: 66;
     @include flex-container;
     background: rgba(255, 255, 255, .3);
     color: $heroClr;
