--- a/css/style.css
+++ b/css/style.css
@@ -52,14 +52,35 @@ header {
   left: 0;
   right: 0;
   padding: 30px;
-  z-index: 999999999999999999; }
+  z-index: 9999999999999999999999999999999999999999999999999999999999999999999; }
   /* line 10, layout/_header.scss */
   header .header-nav-link {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     font-size: 18px;
     padding: 40px 25px 16px;
-    margin: 0 5px; }
+    margin: 0 5px;
+    border-radius: 0 0 5px 5px; }
+
+/* line 19, layout/_header.scss */
+.header-nav-link.hero.active {
+  background: #74c7d5; }
+
+/* line 23, layout/_header.scss */
+.header-nav-link.services.active {
+  background: #df5c64; }
+
+/* line 27, layout/_header.scss */
+.header-nav-link.about.active {
+  background: #91778e; }
+
+/* line 31, layout/_header.scss */
+.header-nav-link.work.active {
+  background: #a1ca6c; }
+
+/* line 35, layout/_header.scss */
+.header-nav-link.contacts.active {
+  background: #82c8bd; }
 
 /* line 1, layout/_sticky-footer.scss */
 #site {
@@ -87,7 +108,7 @@ header {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 666666666666666666666666;
+    z-index: 66;
     display: flex;
     flex-direction: row;
     align-content: center;
