Added display: block to after-before mixin, added justif-content variable to flex container mixin, added circle mixin. Finished services section.

--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -1,10 +1,10 @@
 // Sizes
 
 //Main FZ:
-$BodyFZ: 14px;
-$SmallFZ: 16px;
-$MediumFZ: 18px;
-$BigFZ: 20px;
+$bodyFZ: 14px;
+$smallFZ: 16px;
+$mediumFZ: 18px;
+$bigFZ: 20px;
 
 // Colors
 
