--- a/css/sections/_hero.scss
+++ b/css/sections/_hero.scss
@@ -2,11 +2,12 @@
   position: relative;
   width: 100%;
   height: 100vh;
+  padding: 0;
 
   #hero-text-wrapper {
     @include centering;
     z-index: 66;
-    @include flex-container;
+    @include flex-container(center);
     background: rgba(255, 255, 255, .3);
     color: $heroClr;
     padding: 30px 65px 30px 40px;
