--- a/css/base/_generic-settings.scss
+++ b/css/base/_generic-settings.scss
@@ -11,9 +11,6 @@ html, body {
 body {
   position: relative;
   text-align: center;
-  color: #fff;
-  background: #000;
-  font-size: $BodyFZ
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -21,14 +18,17 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 50px;
-  font-family: 'Damion', cursive;
   margin: 0;
-  line-height: 38px;
 }
 
-a {
-  cursor: pointer;
-  text-decoration: none;
-  color: #fff;
+h2 {
+  margin-bottom: 35px;
+}
+
+section {
+  padding: 190px 0 80px;
+}
+
+.section-description {
+  margin-bottom: 60px;
 }
