--- a/css/helpers/_mixins.scss
+++ b/css/helpers/_mixins.scss
@@ -1,14 +1,15 @@
 @mixin after-before {
   content: '';
   position: absolute;
+  display: block;
 }
 
-@mixin flex-container {
+@mixin flex-container ($justify-content) {
   display: flex;
   flex-direction: row;
   align-content: center;
   align-items: center;
-  justify-content: space-between;
+  justify-content: $justify-content;
   flex-wrap: wrap;
 }
 
@@ -23,4 +24,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+@mixin circle ($px) {
+  width: $px;
+  height: $px;
+  border-radius: 50%;
 }
