--- a/css/style.css
+++ b/css/style.css
@@ -2,42 +2,93 @@
 .clearfix {
   content: '';
   position: absolute;
-  clear: both; }
+  display: block;
+  clear: both;
+}
 
 /* line 1, base/_generic-settings.scss */
 * {
   box-sizing: border-box;
-  margin: 0; }
+  margin: 0;
+}
 
 /* line 6, base/_generic-settings.scss */
 html, body {
   height: 100%;
-  min-height: 100%; }
+  min-height: 100%;
+}
 
 /* line 11, base/_generic-settings.scss */
 body {
   position: relative;
   text-align: center;
+}
+
+/* line 16, base/_generic-settings.scss */
+h1, h2, h3, h4, h5, h6 {
+  display: inline-block;
+}
+
+/* line 20, base/_generic-settings.scss */
+h1 {
+  margin: 0;
+}
+
+/* line 24, base/_generic-settings.scss */
+h2 {
+  margin-bottom: 35px;
+}
+
+/* line 28, base/_generic-settings.scss */
+section {
+  padding: 190px 0 80px;
+}
+
+/* line 32, base/_generic-settings.scss */
+.section-description {
+  margin-bottom: 60px;
+}
+
+/* line 1, base/_elements-style.scss */
+body {
   color: #fff;
   background: #000;
-  font-size: 14px; }
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+}
 
-/* line 19, base/_generic-settings.scss */
-h1, h2, h3, h4, h5, h6 {
-  display: inline-block; }
-
-/* line 23, base/_generic-settings.scss */
+/* line 8, base/_elements-style.scss */
 h1 {
   font-size: 50px;
   font-family: 'Damion', cursive;
-  margin: 0;
-  line-height: 38px; }
+  line-height: 38px;
+}
 
-/* line 30, base/_generic-settings.scss */
+/* line 14, base/_elements-style.scss */
+h2 {
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  font-size: 60px;
+  line-height: 50px;
+}
+
+/* line 20, base/_elements-style.scss */
+.uppercase {
+  text-transform: uppercase;
+}
+
+/* line 24, base/_elements-style.scss */
+.section-description {
+  color: #ffcccf;
+}
+
+/* line 28, base/_elements-style.scss */
 a {
   cursor: pointer;
   text-decoration: none;
-  color: #fff; }
+  color: #fff;
+}
 
 /* line 1, layout/_header.scss */
 header {
@@ -52,86 +103,183 @@ header {
   left: 0;
   right: 0;
   padding: 30px;
-  z-index: 9999999999999999999999999999999999999999999999999999999999999999999; }
-  /* line 10, layout/_header.scss */
-  header .header-nav-link {
-    font-family: 'Lato', sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    padding: 40px 25px 16px;
-    margin: 0 5px;
-    border-radius: 0 0 5px 5px; }
+  z-index: 9999999999999999999999999999999999999999999999999999999999999999999;
+}
+/* line 10, layout/_header.scss */
+header .header-nav-link {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  padding: 40px 25px 16px;
+  margin: 0 5px;
+  border-radius: 0 0 5px 5px;
+}
 
 /* line 19, layout/_header.scss */
 .header-nav-link.hero.active {
-  background: #74c7d5; }
+  background: #74c7d5;
+}
 
 /* line 23, layout/_header.scss */
 .header-nav-link.services.active {
-  background: #df5c64; }
+  background: #df5c64;
+}
 
 /* line 27, layout/_header.scss */
 .header-nav-link.about.active {
-  background: #91778e; }
+  background: #91778e;
+}
 
 /* line 31, layout/_header.scss */
 .header-nav-link.work.active {
-  background: #a1ca6c; }
+  background: #a1ca6c;
+}
 
 /* line 35, layout/_header.scss */
 .header-nav-link.contacts.active {
-  background: #82c8bd; }
+  background: #82c8bd;
+}
 
 /* line 1, layout/_sticky-footer.scss */
 #site {
   display: flex;
   min-height: 100vh;
-  flex-direction: column; }
-  /* line 6, layout/_sticky-footer.scss */
-  #site #site-content {
-    flex: 1; }
+  flex-direction: column;
+}
+/* line 6, layout/_sticky-footer.scss */
+#site #site-content {
+  flex: 1;
+}
 
 /* line 1, layout/_container.scss */
 .container {
   width: 100%;
   max-width: 950px;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 /* line 1, sections/_hero.scss */
 #hero {
   position: relative;
   width: 100%;
-  height: 100vh; }
-  /* line 6, sections/_hero.scss */
-  #hero #hero-text-wrapper {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 66;
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    background: rgba(255, 255, 255, 0.3);
-    color: #74c7d5;
-    padding: 30px 65px 30px 40px;
-    border-radius: 5px; }
+  height: 100vh;
+  padding: 0;
+}
+/* line 7, sections/_hero.scss */
+#hero #hero-text-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 66;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  background: rgba(255, 255, 255, 0.3);
+  color: #74c7d5;
+  padding: 30px 65px 30px 40px;
+  border-radius: 5px;
+}
 
-/* line 18, sections/_hero.scss */
+/* line 19, sections/_hero.scss */
 #hero-text-wrapper #GIC {
   text-align: right;
   font-size: 36px;
   font-family: 'Lato', sans-serif;
   font-weight: 300;
-  line-height: 44px; }
-/* line 24, sections/_hero.scss */
+  line-height: 44px;
+}
+/* line 25, sections/_hero.scss */
 #hero-text-wrapper #first {
   font-size: 100px;
   font-family: 'Lato', sans-serif;
   font-weight: 900;
-  line-height: 80px; }
+  line-height: 80px;
+}
+
+/* line 1, sections/_services.scss */
+#services {
+  background: #b24a50;
+}
+/* line 3, sections/_services.scss */
+#services #subtitle {
+  font-size: 20px;
+  text-transform: uppercase;
+  margin-bottom: 22px;
+}
+/* line 8, sections/_services.scss */
+#services .section-description {
+  margin-bottom: 120px;
+}
+
+/* line 13, sections/_services.scss */
+#subtitle #subtitle-link {
+  color: #ec9da2;
+}
+
+/* line 17, sections/_services.scss */
+#services-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+/* line 19, sections/_services.scss */
+#services-wrapper .service {
+  width: 215px;
+  padding: 50px 25px 45px;
+  background-color: #c8535a;
+  margin: 10px;
+}
+
+/* line 28, sections/_services.scss */
+.service h3 {
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  font-size: 24px;
+  margin-bottom: 50px;
+  line-height: 20px;
+}
+/* line 34, sections/_services.scss */
+.service .service-description {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  color: #fefefe;
+}
+
+/* line 40, sections/_services.scss */
+.transparent-circle-with-border {
+  position: relative;
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  background: transparent;
+  border: 5px solid #fff;
+  margin: 0 auto 35px;
+}
+/* line 46, sections/_services.scss */
+.transparent-circle-with-border .white-circle {
+  background: #fff;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: none;
+}
+/* line 51, sections/_services.scss */
+.transparent-circle-with-border .white-circle img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 /*# sourceMappingURL=style.css.map */
