Added 0 padding to all elements. Finished about section.

--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -12,3 +12,4 @@ $heroClr: #74c7d5;
 $teamRectangleClr: #4d3f4b;
 $contactsNavAndPlaceholderAndFooterSocialBgClr: #82c8bd;
 $contactsFormAndFooter: #68a097;
+$aboutSectionRed: #df5c64;
