--- a/css/helpers/_mixins.scss
+++ b/css/helpers/_mixins.scss
@@ -6,18 +6,11 @@
 
 @mixin flex-container ($justify-content) {
   display: flex;
-  flex-direction: row;
   align-content: center;
   align-items: center;
   justify-content: $justify-content;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
 }
-
-@mixin lato ($weight: 400) {
-  font-family: 'Lato', sans-serif;
-  font-weight: $weight;
-}
-
 
 @mixin centering {
   position: absolute;
