--- a/css/style.css
+++ b/css/style.css
@@ -1,445 +1,98 @@
-/* line 1, helpers/_utilities.scss */
-.clearfix {
-  content: '';
-  position: absolute;
-  display: block;
-  clear: both;
-}
+/*
+Error: Undefined mixin 'lato'.
+        on line 11 of C:/xampp/htdocs/Acrostia/css/layout/_header.scss, in `lato'
+        from line 11 of C:/xampp/htdocs/Acrostia/css/layout/_header.scss
+        from line 1 of C:/xampp/htdocs/Acrostia/css/layout/_module.scss
+        from line 3 of C:\xampp\htdocs\Acrostia\css\style.scss
 
-/* line 1, base/_generic-settings.scss */
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-/* line 7, base/_generic-settings.scss */
-html, body {
-  height: 100%;
-  min-height: 100%;
-}
-
-/* line 12, base/_generic-settings.scss */
-body {
-  position: relative;
-  text-align: center;
-}
-
-/* line 17, base/_generic-settings.scss */
-h1, h2, h3, h4, h5, h6 {
-  display: inline-block;
-}
-
-/* line 21, base/_generic-settings.scss */
-h1 {
-  margin: 0;
-}
-
-/* line 25, base/_generic-settings.scss */
-h2 {
-  margin-bottom: 35px;
-}
-
-/* line 29, base/_generic-settings.scss */
-section {
-  padding: 190px 0 80px;
-}
-
-/* line 33, base/_generic-settings.scss */
-.section-description {
-  margin-bottom: 60px;
-}
-
-/* line 1, base/_elements-style.scss */
-body {
-  color: #fff;
-  background: #000;
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-}
-
-/* line 8, base/_elements-style.scss */
-h1 {
-  font-size: 50px;
-  font-family: 'Damion', cursive;
-  line-height: 38px;
-}
-
-/* line 14, base/_elements-style.scss */
-h2 {
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
-  font-size: 60px;
-  line-height: 50px;
-}
-
-/* line 20, base/_elements-style.scss */
-.uppercase {
-  text-transform: uppercase;
-}
-
-/* line 24, base/_elements-style.scss */
-.section-description {
-  color: #ffcccf;
-}
-
-/* line 28, base/_elements-style.scss */
-a {
-  cursor: pointer;
-  text-decoration: none;
-  color: #fff;
-}
-
-/* line 1, layout/_header.scss */
-header {
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  padding: 30px;
-  z-index: 9999999999999999999999999999999999999999999999999999999999999999999;
-}
-/* line 10, layout/_header.scss */
-header .header-nav-link {
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  padding: 40px 25px 16px;
-  margin: 0 5px;
-  border-radius: 0 0 5px 5px;
-}
-
-/* line 19, layout/_header.scss */
-.header-nav-link.hero.active {
-  background: #74c7d5;
-}
-
-/* line 23, layout/_header.scss */
-.header-nav-link.services.active {
-  background: #df5c64;
-}
-
-/* line 27, layout/_header.scss */
-.header-nav-link.about.active {
-  background: #91778e;
-}
-
-/* line 31, layout/_header.scss */
-.header-nav-link.work.active {
-  background: #a1ca6c;
-}
-
-/* line 35, layout/_header.scss */
-.header-nav-link.contacts.active {
-  background: #82c8bd;
-}
-
-/* line 1, layout/_sticky-footer.scss */
-#site {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
-/* line 6, layout/_sticky-footer.scss */
-#site #site-content {
-  flex: 1;
-}
-
-/* line 1, layout/_container.scss */
-.container {
-  width: 100%;
-  max-width: 950px;
-  margin: 0 auto;
-}
-
-/* line 1, sections/_hero.scss */
-#hero {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  padding: 0;
-}
-/* line 7, sections/_hero.scss */
-#hero #hero-text-wrapper {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 66;
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  background: rgba(255, 255, 255, 0.3);
-  color: #74c7d5;
-  padding: 30px 65px 30px 40px;
-  border-radius: 5px;
-}
-
-/* line 19, sections/_hero.scss */
-#hero-text-wrapper #GIC {
-  text-align: right;
-  font-size: 36px;
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
-  line-height: 44px;
-}
-/* line 25, sections/_hero.scss */
-#hero-text-wrapper #first {
-  font-size: 100px;
-  font-family: 'Lato', sans-serif;
-  font-weight: 900;
-  line-height: 80px;
-}
-
-/* line 1, sections/_services.scss */
-#services {
-  background: #b24a50;
-}
-/* line 3, sections/_services.scss */
-#services #subtitle {
-  font-size: 20px;
-  text-transform: uppercase;
-  margin-bottom: 22px;
-}
-/* line 8, sections/_services.scss */
-#services .section-description {
-  margin-bottom: 120px;
-}
-
-/* line 13, sections/_services.scss */
-#subtitle #subtitle-link {
-  color: #ec9da2;
-}
-
-/* line 17, sections/_services.scss */
-#services-wrapper {
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-/* line 19, sections/_services.scss */
-#services-wrapper .service {
-  width: 215px;
-  padding: 50px 25px 45px;
-  background-color: #c8535a;
-  margin: 10px;
-}
-
-/* line 28, sections/_services.scss */
-.service h3 {
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
-  font-size: 24px;
-  margin-bottom: 50px;
-  line-height: 20px;
-}
-/* line 34, sections/_services.scss */
-.service .service-description {
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  color: #fefefe;
-}
-
-/* line 40, sections/_services.scss */
-.transparent-circle-with-border {
-  position: relative;
-  width: 140px;
-  height: 140px;
-  border-radius: 50%;
-  background: transparent;
-  border: 5px solid #fff;
-  margin: 0 auto 35px;
-}
-/* line 46, sections/_services.scss */
-.transparent-circle-with-border .white-circle {
-  background: #fff;
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: none;
-}
-/* line 51, sections/_services.scss */
-.transparent-circle-with-border .white-circle img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-/* line 1, sections/_about.scss */
-#about {
-  background: #665464;
-}
-/* line 3, sections/_about.scss */
-#about #MTT {
-  font-family: 'Lato', sans-serif;
-  font-weight: 900;
-  font-size: 25px;
-  padding: 15px 40px;
-  background: #a1ca6c;
-  display: inline-block;
-  margin: 0 auto 70px;
-  border-radius: 5px;
-  position: relative;
-}
-/* line 12, sections/_about.scss */
-#about #MTT:after {
-  content: '';
-  position: absolute;
-  display: block;
-  bottom: -16px;
-  left: 50%;
-  transform: translate(-50%);
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 16px 16px 0 16px;
-  border-color: #a1ca6c transparent transparent transparent;
-}
-
-/* line 26, sections/_about.scss */
-#team-wrapper {
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-/* line 28, sections/_about.scss */
-#team-wrapper .team-member-card {
-  background: rgba(77, 63, 75, 0.5);
-  width: 215px;
-  margin: 10px;
-  padding: 50px 25px 30px 25px;
-  border-radius: 5px;
-  transition: all .3s;
-}
-
-/* line 38, sections/_about.scss */
-.team-member-circle {
-  position: relative;
-  background: #fff;
-  border-radius: 50%;
-  border: 5px solid #a1859e;
-  margin: 0 auto 30px;
-  transition: all .3s;
-}
-/* line 45, sections/_about.scss */
-.team-member-circle img {
-  padding-top: 10px;
-  transition: all .3s;
-}
-/* line 49, sections/_about.scss */
-.team-member-circle .hover-img {
-  padding-top: 10px;
-  display: none;
-  transition: all .3s;
-}
-
-/* line 57, sections/_about.scss */
-.team-member-card h4 {
-  font-family: 'Lato', sans-serif;
-  font-weight: 900;
-  font-size: 21px;
-  color: #c7b6c5;
-  margin-bottom: 15px;
-  transition: all .3s;
-}
-/* line 64, sections/_about.scss */
-.team-member-card .position {
-  color: #a1ca6c;
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  margin-bottom: 40px;
-  transition: all .3s;
-}
-/* line 70, sections/_about.scss */
-.team-member-card ul {
-  list-style: none;
-}
-/* line 72, sections/_about.scss */
-.team-member-card ul .team-social-list-item {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background: #a1859e;
-  transition: all .3s;
-}
-/* line 76, sections/_about.scss */
-.team-member-card ul .team-social-list-item .fa {
-  line-height: 30px;
-}
-/* line 80, sections/_about.scss */
-.team-member-card ul li {
-  float: left;
-  width: 30px;
-  margin: 0 5px;
-}
-/* line 84, sections/_about.scss */
-.team-member-card ul li:after {
-  content: '';
-  position: absolute;
-  display: block;
-  clear: left;
-}
-
-/* line 92, sections/_about.scss */
-.team-member-card:hover {
-  background: rgba(77, 63, 75, 0.8);
-}
-/* line 94, sections/_about.scss */
-.team-member-card:hover .team-member-circle {
-  border-color: #df5c64;
-}
-/* line 96, sections/_about.scss */
-.team-member-card:hover .team-member-circle img {
-  display: none;
-}
-/* line 99, sections/_about.scss */
-.team-member-card:hover .team-member-circle .hover-img {
-  display: inline-block;
-}
-/* line 103, sections/_about.scss */
-.team-member-card:hover h4 {
-  color: #fff;
-}
-/* line 106, sections/_about.scss */
-.team-member-card:hover .position {
-  color: #ff8973;
-}
-/* line 109, sections/_about.scss */
-.team-member-card:hover .team-social-list-item.fb {
-  background: #4f689e;
-}
-/* line 112, sections/_about.scss */
-.team-member-card:hover .team-social-list-item.twitter {
-  background: #74c7d5;
-}
-/* line 115, sections/_about.scss */
-.team-member-card:hover .team-social-list-item.google {
-  background: #df5c64;
-}
-/* line 118, sections/_about.scss */
-.team-member-card:hover .team-social-list-item.linkedin {
-  background: #3e61af;
-}
-
-/*# sourceMappingURL=style.css.map */
+Backtrace:
+C:/xampp/htdocs/Acrostia/css/layout/_header.scss:11:in `lato'
+C:/xampp/htdocs/Acrostia/css/layout/_header.scss:11
+C:/xampp/htdocs/Acrostia/css/layout/_module.scss:1
+C:\xampp\htdocs\Acrostia\css\style.scss:3
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:352:in `block in visit_mixin'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:98:in `block in with_mixin'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:98:in `with_mixin'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:350:in `visit_mixin'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `block in with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:444:in `block (2 levels) in visit_rule'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:444:in `map'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:444:in `block in visit_rule'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:442:in `visit_rule'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `block in with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:444:in `block (2 levels) in visit_rule'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:444:in `map'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:444:in `block in visit_rule'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:442:in `visit_rule'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `block in with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:329:in `block (2 levels) in visit_import'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:329:in `map'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:329:in `block in visit_import'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:88:in `block in with_import'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:88:in `with_import'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:326:in `visit_import'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `block in with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:329:in `block (2 levels) in visit_import'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:329:in `map'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:329:in `block in visit_import'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:88:in `block in with_import'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:88:in `with_import'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:326:in `visit_import'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `block in with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:52:in `map'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:171:in `block in visit_children'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:170:in `visit_children'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:190:in `visit_root'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:161:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:10:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/root_node.rb:36:in `css_tree'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:389:in `_render_with_sourcemap'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:307:in `render_with_sourcemap'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/sass_scss.rb:391:in `run'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/sass_scss.rb:63:in `process_result'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/base.rb:52:in `parse'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/base.rb:19:in `parse!'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/bin/sass:13:in `<top (required)>'
+C:/Program Files (x86)/Koala/bin/sass:22:in `load'
+C:/Program Files (x86)/Koala/bin/sass:22:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Undefined mixin 'lato'.\A         on line 11 of C:/xampp/htdocs/Acrostia/css/layout/_header.scss, in `lato'\A         from line 11 of C:/xampp/htdocs/Acrostia/css/layout/_header.scss\A         from line 1 of C:/xampp/htdocs/Acrostia/css/layout/_module.scss\A         from line 3 of C:\xampp\htdocs\Acrostia\css\style.scss"; }
