Revert "Added 0 padding to all elements. Finished about section."
This reverts commit 16ac767b83e84fff02be64fb22d35e1e272833f9.

--- a/css/helpers/_mixins.scss
+++ b/css/helpers/_mixins.scss
@@ -6,11 +6,18 @@
 
 @mixin flex-container ($justify-content) {
   display: flex;
+  flex-direction: row;
   align-content: center;
   align-items: center;
   justify-content: $justify-content;
-  flex-flow: row wrap;
+  flex-wrap: wrap;
 }
+
+@mixin lato ($weight: 400) {
+  font-family: 'Lato', sans-serif;
+  font-weight: $weight;
+}
+
 
 @mixin centering {
   position: absolute;
