Created contacts form.

--- a/css/sections/_about.scss
+++ b/css/sections/_about.scss
@@ -11,6 +11,7 @@
     position: relative;
     &:after {
       @include after-before;
+      position: absolute;
       bottom: -16px;
       left: 50%;
       transform: translate(-50%);
